welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:14: error: '(' expected but identifier found.
  if detrompeur==1){
     ^SlugTracking:19: error: illegal start of simple expression
}
^